build/k8s-manifests/bases/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
      branch: master
  template:
    metadata:
      labels:
        app: docs
        branch: master
    spec:
      containers:
      - image: nginx
        name: docs
