build/k8s-manifests/bases/30-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app: docs
    branch: master
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: docs
    branch: master
