build/k8s-manifests/bases/40-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docs
  labels:
    app: docs
    branch: master
spec:
  rules:
  - host: docs.apps.storageos.net
    http:
      paths:
      - backend:
          serviceName: docs
          servicePort: 80
        path: /
